# hs-turn-based-battle

./: .gitignore  cabalhack.sh  hs-turn-based-battle.cabal  index.html  stack.yaml
app/: Main.hs
src/: Class.hs  Combatant.hs  Command.hs  Id.hs  Move.hs  Player.hs  Simulation.hs  UserInterface.hs
src/AI/: AlphaBeta.hs
