name:                hs-turn-based-battle
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/hs-turn-based-battle#readme
license:             GPL-3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     UserInterface
                     , Combatant
                     , Simulation
                     , Command
                     , Id
                     , Player
                     , Class
                     , Move
                     , AI.AlphaBeta
  build-depends:       base > 4.7 && < 5
                     , containers
                     , reflex >= 0.4.0
                     , reflex-dom >= 0.3
  default-language:    Haskell2010

executable hs-turn-based-battle-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hs-turn-based-battle
                     , containers
  default-language:    Haskell2010

test-suite hs-turn-based-battle-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hs-turn-based-battle
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/hs-turn-based-battle
